[tool.poetry]
name = "course-project-2-workradar"
version = "0.1.0"
description = ""
authors = ["a12345 <shu.m2010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
pre-commit = "^4.1.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
